# Distributed_Spam_Detector

./: .env.example  .gitignore  app.py  distributed_spam_detection.ipynb  docker-compose.yaml  pyproject.toml
artifacts/: model.keras  vocabulary.txt
