[project]
name = "distributedmlproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets==8.1.8",
    "numpy>=2.4.6",
    "pandas==3.0.3",
    "pandas-stubs~=3.0.3",
    "pyarrow==24.0.0",
    "ray[client]>=2.55.1",
    "scikit-learn==1.9.0rc1",
    "tqdm==4.67.3",
]
